--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <!-- <script src="classes.js"></script> -->
     <!-- <script src="prototype_es5.js"></script> -->
     <!-- <script src="prototype_es6.js"></script> -->
-    <!-- <script src="context.js"></script> -->
-    <script src="mvc.js"></script>
+    <script src="context.js"></script>
+    <!-- <script src="mvc.js"></script> -->
 </head>
 
 <body></body>
